[package]
name = "assault-cube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
# hax = { git = "https://github.com/hax-rs/hax", branch = "feature" }
hax = { path = "../hax/hax" }
linkme = "0.3.7"
log = "0.4.17"
memlib = "0.1.1"
serde = { version = "1.0.149", features = ["derive"] }
typetag = "0.2.3"
